[gd_scene load_steps=4 format=2]

[ext_resource path="res://1x/Item placeholder.png" type="Texture" id=1]
[ext_resource path="res://Item.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.98372

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Item" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 9.5, 9.5 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
